# Backend/src/controller/root.controller.js
@@ -31,11 +31,11 @@ export default class RootController {
      */
     async index(req, res, next) {
         res.sendResult([
-            {
-                _name: "address",
-                query: {url: "/address", method: "GET", query_params: ["search", "first_name", "last_name", "phone", "email"]},
-                create: {url: "/address", method: "POST"},
-            },
+            // {
+            //     _name: "address",
+            //     query: {url: "/address", method: "GET", query_params: ["search", "first_name", "last_name", "phone", "email"]},
+            //     create: {url: "/address", method: "POST"},
+            // },
             {
                 _name: "order",
                 query: {url: "/order", method: "GET", query_params: ["search", "first_name", "last_name", "phone", "email"]},
